k8s-yaml/nginx/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  namespace: ng
spec:
  replicas: 3
  selector:
    matchLabels:
     app: nginx-pod
  template:
    metadata:
      labels:
        app: nginx-pod
    spec:
      containers:
      - name: nginx
        image: nginx:1.25.1
        imagePullPolicy: IfNotPresent
          #        command: 
          #- sleep
          #- "3600"
      restartPolicy: Always
